chore: try to migrate to hard fork