@@ -1,37 +1,76 @@
+import org.gradle.api.tasks.testing.logging.TestExceptionFormat
+import org.gradle.api.tasks.testing.logging.TestLogEvent
+
 plugins {
     java
-    `maven-publish`
-    id("org.leavesmc.leavesweight.patcher") version "1.0.2-SNAPSHOT"
+    id("org.leavesmc.leavesweight.patcher") version "2.0.0-SNAPSHOT"
+}
+
+paperweight {
+    upstreams.register("folia") {
+        repo = github("PaperMC", "Folia")
+        ref = providers.gradleProperty("foliaRef")
+
+        patchFile {
+            path = "folia-server/build.gradle.kts"
+            outputFile = file("lumina-server/build.gradle.kts")
+            patchFile = file("lumina-server/build.gradle.kts.patch")
+        }
+
+        patchFile {
+            path = "folia-api/build.gradle.kts"
+            outputFile = file("lumina-api/build.gradle.kts")
+            patchFile = file("lumina-api/build.gradle.kts.patch")
+        }
+
+        patchRepo("paperApi") {
+            upstreamPath = "paper-api"
+            patchesDir = file("lumina-api/paper-patches")
+            outputDir = file("paper-api")
+        }
+
+        patchDir("foliaApi") {
+            upstreamPath = "folia-api"
+            excludes = listOf("build.gradle.kts", "build.gradle.kts.patch", "paper-patches")
+            patchesDir = file("lumina-api/folia-patches")
+            outputDir = file("folia-api")
+        }
+    }
 }
 
 val paperMavenPublicUrl = "https://repo.papermc.io/repository/maven-public/"
-
-repositories {
-    maven(paperMavenPublicUrl)
-    mavenCentral()
-    maven("https://repo.leavesmc.top/snapshots")
-    maven("https://repo.leavesmc.org/releases")
-}
-
-dependencies {
-    remapper("net.fabricmc:tiny-remapper:0.8.6:fat")
-    decompiler("org.quiltmc:quiltflower:1.9.0")
-    leavesclip("org.leavesmc:leavesclip:2.0.1")
-}
+val leavesMavenSnapshotsUrl = "https://repo.leavesmc.org/snapshots/"
 
 subprojects {
-    apply(plugin = "java")
+    apply(plugin = "java-library")
     apply(plugin = "maven-publish")
 
     java {
-        toolchain {
-            languageVersion.set(JavaLanguageVersion.of(21))
-        }
+        sourceCompatibility = JavaVersion.VERSION_21
+        targetCompatibility = JavaVersion.VERSION_21
+        toolchain.languageVersion.set(JavaLanguageVersion.of(21))
+    }
+
+    repositories {
+        mavenCentral()
+        maven(paperMavenPublicUrl)
+        maven(leavesMavenSnapshotsUrl)
+    }
+
+    dependencies {
+        "testRuntimeOnly"("org.junit.platform:junit-platform-launcher")
+    }
+
+    tasks.withType<AbstractArchiveTask>().configureEach {
+        isPreserveFileTimestamps = false
+        isReproducibleFileOrder = true
     }
 
     tasks.withType<JavaCompile> {
         options.encoding = Charsets.UTF_8.name()
-        options.release.set(21)
+        options.compilerArgs.add("--enable-preview")
+        options.isFork = true
+        options.forkOptions.memoryMaximumSize = "8g"
     }
 
     tasks.withType<Javadoc> {
@@ -42,71 +81,22 @@ subprojects {
         filteringCharset = Charsets.UTF_8.name()
     }
 
-    repositories {
-        mavenCentral()
-        maven(paperMavenPublicUrl)
-        maven("https://oss.sonatype.org/content/groups/public/")
-        maven("https://ci.emc.gs/nexus/content/groups/aikar/")
-        maven("https://repo.aikar.co/content/groups/aikar")
-        maven("https://repo.md-5.net/content/repositories/releases/")
-        maven("https://hub.spigotmc.org/nexus/content/groups/public/")
-        maven("https://jitpack.io")
-        maven("https://repo.codemc.io/repository/maven-public/")
-    }
-
-}
-
-paperweight {
-    serverProject.set(project(":lumina-server"))
-
-    remapRepo.set("https://maven.fabricmc.net/")
-    decompileRepo.set("https://maven.quiltmc.org/")
-
-    useStandardUpstream("folia") {
-        url.set(github("PaperMC", "Folia"))
-        ref.set(providers.gradleProperty("foliaRef"))
-
-        withStandardPatcher {
-            apiSourceDirPath.set("Folia-API")
-            serverSourceDirPath.set("Folia-Server")
-
-
-            apiPatchDir.set(layout.projectDirectory.dir("patches/api"))
-            apiOutputDir.set(layout.projectDirectory.dir("Lumina-API"))
-
-            serverPatchDir.set(layout.projectDirectory.dir("patches/server"))
-            serverOutputDir.set(layout.projectDirectory.dir("Lumina-Server"))
-        }
-
-        patchTasks.register("generatedApi") {
-            isBareDirectory = true
-            upstreamDirPath = "paper-api-generator/generated"
-            patchDir = layout.projectDirectory.dir("patches/generated-api")
-            outputDir = layout.projectDirectory.dir("paper-api-generator/generated")
+    tasks.withType<Test> {
+        testLogging {
+            showStackTraces = true
+            exceptionFormat = TestExceptionFormat.FULL
+            events(TestLogEvent.STANDARD_OUT)
         }
     }
-}
 
-tasks.generateDevelopmentBundle {
-    apiCoordinates.set("org.leavesmc.lumina:lumina-api")
-    libraryRepositories.addAll(
-        "https://repo.maven.apache.org/maven2/",
-        paperMavenPublicUrl,
-    )
-}
-
-allprojects {
-    publishing {
+    extensions.configure<PublishingExtension> {
         repositories {
-        }
-    }
-}
-
-publishing {
-    if (project.hasProperty("publishDevBundle")) {
-        publications.create<MavenPublication>("devBundle") {
-            artifact(tasks.generateDevelopmentBundle) {
-                artifactId = "dev-bundle"
+            maven(leavesMavenSnapshotsUrl) {
+                name = "LeavesMC-Snapshots"
+                credentials(PasswordCredentials::class) {
+                    username = System.getenv("PRIVATE_MAVEN_REPO_USERNAME")
+                    password = System.getenv("PRIVATE_MAVEN_REPO_PASSWORD")
+                }
             }
         }
     }
